chore: backend configs & fixes

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ JWT_SECRET=super_gizli_bir_kelime
 HMAC_SECRET=baska_gizli_bir_kelime
 FRONTEND_URL=http://localhost:5173
 ATTEND_BASE_URL=http://172.20.10.3:4000
+CORS_ORIGINS=http://localhost:5173,https://qr-attendance-frontend.vercel.app
 
