deploy: backend CORS fix and ready for render

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ JWT_SECRET=super_gizli_bir_kelime
 HMAC_SECRET=baska_gizli_bir_kelime
 FRONTEND_ORIGIN=https://qr-attendance-frontend.vercel.app
 CORS_ORIGINS=https://qr-frontend.vercel.app,http://localhost:5173
-ATTEND_BASE_URL = https://qr-attendance-backend-vwjj.onrender.com
+ATTEND_BASE_URL = https://qr-attendance-backend-vwjj.onrender.com/attend
