--- a/.env
+++ b/.env
@@ -2,6 +2,5 @@ MONGO_URI=mongodb+srv://sarenuratacan_db_user:sare123@yoklama.hnzt02s.mongodb.ne
 PORT=4000
 JWT_SECRET=super_gizli_bir_kelime
 HMAC_SECRET=baska_gizli_bir_kelime
-FRONTEND_ORIGIN=https://qr-attendance-frontend.vercel.app
-CORS_ORIGINS=https://qr-frontend.vercel.app,http://localhost:5173
-ATTEND_BASE_URL = https://qr-attendance-backend-vwjj.onrender.com/attend
+FRONTEND_URL=http://localhost:5173
+ATTEND_BASE_URL=http://172.20.10.3:4000
